// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router Component should handle unique route settings: settings 1`] = `
<React.Suspense
  fallback={
    <Loader
      skeletonProps={
        {
          "size": "sm",
        }
      }
      tableProps={{}}
      variant="title"
    />
  }
>
  <Routes>
    <Route
      element={<Unknown />}
      path="/lorem"
    />
    <Route
      element={<Unknown />}
      path="/ipsum"
    />
    <Route
      element={<Unknown />}
      path="/hello"
    />
    <Route
      element={<Unknown />}
      path="/loremDolorHello"
    />
    <Route
      element={
        <Navigate
          replace={true}
          to="./"
        />
      }
      path="*"
    />
  </Routes>
</React.Suspense>
`;

exports[`Router Component should render a basic component: basic 1`] = `
<React.Suspense
  fallback={
    <Loader
      skeletonProps={
        {
          "size": "sm",
        }
      }
      tableProps={{}}
      variant="title"
    />
  }
>
  <Routes>
    <Route
      element={<Unknown />}
      path=":productPath"
    />
    <Route
      element={<Unknown />}
      path="*"
    />
    <Route
      element={
        <Navigate
          replace={true}
          to="./"
        />
      }
      path="*"
    />
  </Routes>
</React.Suspense>
`;
